--- a/index.html
+++ b/index.html
@@ -615,13 +615,13 @@
 </div><!-- /footer-wrap -->
 
 <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
-<script src="js/jquery.flexslider-min.js"></script>
-<script src="js/superfish.js"></script>
+<script src="./js/jquery.flexslider-min.js"></script>
+<script src="./js/superfish.js"></script>
 <script src="fancybox/jquery.fancybox.pack.js"></script>
-<script src="js/jquery.formLabels1.0.js"></script>
-<script src="js/jquery.equalHeights.js"></script>
-<script src="js/jquery.scripts.js"></script>
-<script src="js/slider.js"></script>
+<script src="./js/jquery.formLabels1.0.js"></script>
+<script src="./js/jquery.equalHeights.js"></script>
+<script src="./js/jquery.scripts.js"></script>
+<script src="./js/slider.js"></script>
 
 <!--[if (gte IE 6)&(lte IE 8)]>
 	<script type="text/javascript" src="js/selectivizr-min.js"></script>
