--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
 	</div>
 </div><!-- /footer-wrap -->
 
-<script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
+<script src="./js/jquery-1.7.2.min.js"></script>
 <script src="./js/jquery.flexslider-min.js"></script>
 <script src="./js/superfish.js"></script>
 <script src="fancybox/jquery.fancybox.pack.js"></script>
