--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 	<link rel="stylesheet" href="css/flexslider.css">
 	<link rel="stylesheet" href="fancybox/jquery.fancybox.css">
 	<link rel="stylesheet" href="css/skeleton.css">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/media.css">
 
 	<!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 
