Links to slider

--- a/index.html
+++ b/index.html
@@ -96,15 +96,15 @@
         <div id="viewport">
             <ul id="slidewrapper">
                 <li class="slide">
-                    <a href="#game1"><img src="https://0.s3.envato.com/files/228255997/inline.png" alt="1" class="slide-img"></a></li>
+                    <a href="https://0.s3.envato.com/files/228256006/index.html"><img src="https://0.s3.envato.com/files/228255997/inline.png" alt="1" class="slide-img"></a></li>
                 <li class="slide">
-                    <a href="#game2"><img src="https://image-cc.s3.envato.com/files/228338733/tilecover.jpg" alt="2" class="slide-img"></a></li>
+                    <a href="https://0.s3.envato.com/files/228338741/index.html"><img src="https://image-cc.s3.envato.com/files/228338733/tilecover.jpg" alt="2" class="slide-img"></a></li>
                 <li class="slide">
-                    <a href="#game3"><img src="https://image-cc.s3.envato.com/files/228392952/preview.jpg" alt="3" class="slide-img"></a></li>
+                    <a href="https://www.scirra.com/arcade/adventure-games/run-ninja-17252"><img src="https://image-cc.s3.envato.com/files/228392952/preview.jpg" alt="3" class="slide-img"></a></li>
                 <li class="slide">
-                    <a href="#game4"><img src="https://image-cc.s3.envato.com/files/228393380/SplashFallingA.png" alt="4" class="slide-img"></a></li>
+                    <a href="https://www.scirra.com/arcade/adventure-games/falling-game-17412"><img src="https://image-cc.s3.envato.com/files/228393380/SplashFallingA.png" alt="4" class="slide-img"></a></li>
                 <li class="slide">
-                    <a href="#game5"><img src="https://image-cc.s3.envato.com/files/228416980/300%20Just%20Ring.png" alt="5" class="slide-img"></a></li>
+                    <a href="https://0.s3.envato.com/files/228416988/index.html"><img src="https://image-cc.s3.envato.com/files/228416980/300%20Just%20Ring.png" alt="5" class="slide-img"></a></li>
             </ul>
 
             <div id="prev-next-btns">
