Social icons + new BG for mobile

--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
 					<a href="#" class="icn wordpress">WordPress</a>
 					<a href="#" class="icn rss">RSS</a>					
 				</p><!-- /social -->
+                <aside class="widget group secondSocial">
+                    <a href="#" class="icn twitter">Twitter</a> <a href="#" class="icn facebook">Facebook</a>
+                    <a href="#" class="icn flickr">Flickr</a> <a href="#" class="icn picasa">Picasa</a>
+                    <a href="#" class="icn lnkdin">Linked In</a> <a href="#" class="icn gplus">Google+</a>
+                </aside>
 			</div><!-- /logo-social -->	
 			
 			<!--<div class="row nav-search">
@@ -429,6 +434,13 @@
                         </a>
                     </ul>
 				</aside>
+
+            <!--    <aside class="widget group">
+                    <h3>SOCIAL</h3>
+                    <a href="#" class="icn twitter">Twitter</a> <a href="#" class="icn facebook">Facebook</a>
+                    <a href="#" class="icn flickr">Flickr</a> <a href="#" class="icn picasa">Picasa</a>
+                    <a href="#" class="icn lnkdin">Linked In</a> <a href="#" class="icn gplus">Google+</a>
+                </aside>-->
 							
 				<!--<aside class="widget group">
 					<h3>TEXT WIDGET</h3>
