No need social icons

--- a/index.html
+++ b/index.html
@@ -49,21 +49,19 @@
 				<hgroup class="eight columns alpha">
 					<h1 class="logo nmb"><a href="#"><img src="images/logo.png" alt="IndiGamer" /></a></h1>
 				</hgroup><!-- /hgroup -->
-				
-				<p class="eight columns omega social-links">
-					<a href="#" class="icn facebook">Facebook</a>
-					<a href="#" class="icn twitter">Twitter</a>
-					<a href="#" class="icn dribbble">Dribbble</a>
-					<a href="#" class="icn wordpress">WordPress</a>
-					<a href="#" class="icn rss">RSS</a>					
-				</p><!-- /social -->
-                <aside class="widget group secondSocial">
-                    <a href="#" class="icn twitter">Twitter</a> <a href="#" class="icn facebook">Facebook</a>
-                    <a href="#" class="icn flickr">Flickr</a> <a href="#" class="icn picasa">Picasa</a>
-                    <a href="#" class="icn lnkdin">Linked In</a> <a href="#" class="icn gplus">Google+</a>
-                </aside>
-			</div><!-- /logo-social -->	
-			
+
+                <!-- /logo-social -->
+                <!--<p class="eight columns omega social-links">
+                    <a href="#" class="icn facebook">Facebook</a>
+                    <a href="#" class="icn twitter">Twitter</a>
+                    <a href="#" class="icn dribbble">Dribbble</a>
+                    <a href="#" class="icn wordpress">WordPress</a>
+                    <a href="#" class="icn rss">RSS</a>
+                </p>&lt;!&ndash; /social &ndash;&gt;-->
+            </div>
+
+
+
 			<!--<div class="row nav-search">
 				<nav id="navigation" class="twelve columns alpha">
 					<ul class="nav group">
