--- a/index.html
+++ b/index.html
@@ -41,60 +41,66 @@
 </head>
 
 <body>
+<div class="row nmb header">
+    <header class="sixteen columns">
+        <div class="row logo-social container">
+            <hgroup class="eight columns alpha">
+                <h1 class="logo nmb"><a href="#">
+                    <!-- <img src="images/logo.png" alt="IndiGamer" />-->
+                    Game portal
+                </a></h1>
+            </hgroup><!-- /hgroup -->
+
+            <!-- /logo-social -->
+            <!--<p class="eight columns omega social-links">
+                <a href="#" class="icn facebook">Facebook</a>
+                <a href="#" class="icn twitter">Twitter</a>
+                <a href="#" class="icn dribbble">Dribbble</a>
+                <a href="#" class="icn wordpress">WordPress</a>
+                <a href="#" class="icn rss">RSS</a>
+            </p>&lt;!&ndash; /social &ndash;&gt;-->
+        </div>
+
+
+
+        <!--<div class="row nav-search">
+            <nav id="navigation" class="twelve columns alpha">
+                <ul class="nav group">
+                    &lt;!&ndash;<li>
+                        <a href="index.html">Home</a>
+                        <ul>
+                            <li><a href="index_alt1.html">Homepage Alternative 1</a></li>
+                            <li><a href="index_alt2.html">Homepage Alternative 2</a></li>
+                            <li><a href="index_alt3.html">Homepage Narrow sidebar 1</a></li>
+                        </ul>
+                    </li>&ndash;&gt;
+                    &lt;!&ndash;<li>
+                        <a href="listing_2col.html">Listing 2 columns</a>
+                        <ul>
+                            <li><a href="listing_3col.html">Listing 3 columns</a></li>
+                            <li><a href="listing_4col.html">Listing 4 columns</a></li>
+                            <li><a href="listing_sidebar.html">Listing w/ Sidebar</a></li>
+                        </ul>
+                    </li>&ndash;&gt;
+                    &lt;!&ndash;<li>
+                        <a href="single.html">Post template</a>
+                    </li>
+                    <li>
+                        <a href="fullwidth.html">Fullwidth</a>
+                    </li>	&ndash;&gt;
+                </ul>
+            </nav>&lt;!&ndash; /nav &ndash;&gt;
+            &lt;!&ndash;<form method="post" action="action.php" id="search" class="four columns omega">
+                <p><input type="text" title="Search" /></p>
+            </form>&ndash;&gt;
+        </div>&lt;!&ndash; /nav-search &ndash;&gt;-->
+    </header><!-- /header -->
+</div><!-- row -->
+
+
 <div class="container">
 	
-	<div class="row nmb">
-		<header class="sixteen columns">
-			<div class="row logo-social">
-				<hgroup class="eight columns alpha">
-					<h1 class="logo nmb"><a href="#"><img src="images/logo.png" alt="IndiGamer" /></a></h1>
-				</hgroup><!-- /hgroup -->
 
-                <!-- /logo-social -->
-                <!--<p class="eight columns omega social-links">
-                    <a href="#" class="icn facebook">Facebook</a>
-                    <a href="#" class="icn twitter">Twitter</a>
-                    <a href="#" class="icn dribbble">Dribbble</a>
-                    <a href="#" class="icn wordpress">WordPress</a>
-                    <a href="#" class="icn rss">RSS</a>
-                </p>&lt;!&ndash; /social &ndash;&gt;-->
-            </div>
-
-
-
-			<!--<div class="row nav-search">
-				<nav id="navigation" class="twelve columns alpha">
-					<ul class="nav group">
-						&lt;!&ndash;<li>
-							<a href="index.html">Home</a>
-							<ul>
-								<li><a href="index_alt1.html">Homepage Alternative 1</a></li>
-								<li><a href="index_alt2.html">Homepage Alternative 2</a></li>
-								<li><a href="index_alt3.html">Homepage Narrow sidebar 1</a></li>
-							</ul>
-						</li>&ndash;&gt;
-						&lt;!&ndash;<li>
-							<a href="listing_2col.html">Listing 2 columns</a>
-							<ul>
-								<li><a href="listing_3col.html">Listing 3 columns</a></li>
-								<li><a href="listing_4col.html">Listing 4 columns</a></li>
-								<li><a href="listing_sidebar.html">Listing w/ Sidebar</a></li>
-							</ul>
-						</li>&ndash;&gt;
-						&lt;!&ndash;<li>
-							<a href="single.html">Post template</a>
-						</li>
-						<li>
-							<a href="fullwidth.html">Fullwidth</a>
-						</li>	&ndash;&gt;
-					</ul>
-				</nav>&lt;!&ndash; /nav &ndash;&gt;
-				&lt;!&ndash;<form method="post" action="action.php" id="search" class="four columns omega">
-					<p><input type="text" title="Search" /></p>
-				</form>&ndash;&gt;
-			</div>&lt;!&ndash; /nav-search &ndash;&gt;-->
-		</header><!-- /header -->
-	</div><!-- row -->
     <div id="block-for-slider">
         <div id="viewport">
             <ul id="slidewrapper">
@@ -381,7 +387,7 @@
 					<h3>SPONSORS</h3>
 					<a href="#"><img alt="" src="http://placehold.it/320x130&amp;text=img1" /></a>
 				</aside>
-				
+
 				<aside class="widget group ci_widget_top">
 					<h3>TOP RATED</h3>
                     <ul>
@@ -439,7 +445,7 @@
                     <a href="#" class="icn flickr">Flickr</a> <a href="#" class="icn picasa">Picasa</a>
                     <a href="#" class="icn lnkdin">Linked In</a> <a href="#" class="icn gplus">Google+</a>
                 </aside>-->
-							
+
 				<!--<aside class="widget group">
 					<h3>TEXT WIDGET</h3>
 					<p>Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim.</p>
@@ -457,7 +463,7 @@
 					</ul>
 				</aside>-->
 
-			
+
 			   <!-- <aside class="widget group">
 			        <h3>WIDGET HEADER</h3>
 			        <ul>
@@ -467,7 +473,7 @@
 			            <li><a href="#">October 2011</a> (12)</li>
 			        </ul>
 			    </aside>-->
-			
+
 			   <!-- <aside class="widget group group_ci_twitter_widget">
 			        <h3>TWITTER</h3>
 			        <div class="twitter_update_list">
@@ -476,12 +482,12 @@
 			                    <span>Olark is an amazing service <a href="http://t.co/QZMt1zp7">http://t.co/QZMt1zp7</a></span>
 			                    <a href="http://twitter.com/cssigniter/statuses/179650190767169540" class="twitter-time">1 day ago</a>
 			                </li>
-			
+
 			                <li>
 			                    <span>My precious partners links for our new  #WordPress theme Nico are up go get them <a href="http://t.co/bECfyGrT">http://t.co/bECfyGrT</a></span>
 			                    <a href="http://twitter.com/cssigniter/statuses/179646818160873470" class="twitter-time">1 day ago</a>
 			                </li>
-			
+
 			                <li>
 			                    <span>Is it time to put your portfolio online? Meet Nico: Our brand new #WordPress theme <a href="http://t.co/4xKrHKqY">http://t.co/4xKrHKqY</a></span>
 			                    <a href="http://twitter.com/cssigniter/statuses/179640811196129280" class="twitter-time">1 day ago</a>
@@ -489,7 +495,7 @@
 			            </ul>
 			        </div>
 			    </aside>-->
-			
+
 			    <!--<aside class="widget group group_ci_flickr_widget">
 			        <h3>FLICKR</h3>
 			        <div class="f group"><script type="text/javascript" src="http://www.flickr.com/badge_code_v2.gne?count=9&amp;display=random&amp;&amp;layout=x&amp;source=user&amp;user=12313997@N00&amp;size=s"></script></div>
@@ -498,8 +504,10 @@
 			
 		</div><!-- /main -->
 	</div><!-- /row -->
+
+
     <div class="row">
-        <div class="sixteen columns">
+        <div class="sixteen columns contentBlock">
             <div class="row latest-reviews">
                 <h3>Latest Reviews</h3>
                 <h4 class="sub">Subheader with a small description</h4>
