--- a/index.html
+++ b/index.html
@@ -50,7 +50,37 @@
                     Game portal
                 </a></h1>
             </hgroup><!-- /hgroup -->
-
+            <div class="row nav-search">
+                <nav id="navigation" class="twelve columns alpha">
+                    <ul class="nav group sf-js-enabled sf-shadow">
+                        <li class="">
+                            <a href="index.html" class="sf-with-ul">Главная<!--<span class="sf-sub-indicator"></span>--></a>
+                            <!--<ul style="display: none; visibility: hidden;">
+                                <li><a href="homepage_alt.php">Homepage Alternative 1</a></li>
+                                <li><a href="homepage_alt2.php">Homepage Alternative 2</a></li>
+                                <li><a href="homepage_narrow1.php">Homepage Narrow sidebar 1</a></li>
+                            </ul>-->
+                        </li>
+                        <li>
+                            <a href="games_list.html" class="sf-with-ul">Игры<!--<span class="sf-sub-indicator"> »</span>--></a>
+                           <!-- <ul style="display: none; visibility: hidden;">
+                                <li><a href="listing_3col.php">Listing 3 columns</a></li>
+                                <li><a href="listing_4col.php">Listing 4 columns</a></li>
+                                <li><a href="listing_sidebar.php">Listing w/ Sidebar</a></li>
+                            </ul>-->
+                        </li>
+                        <li>
+                            <a href="#">О сервисе</a>
+                        </li>
+                        <li>
+                            <a href="#">Вход</a>
+                        </li>
+                    </ul>
+                    <select class="alt-nav"><option selected="selected" value="">Go to...</option><option value="index.php">Home »</option><option value="homepage_alt.php">Homepage Alternative 1</option><option value="homepage_alt2.php">Homepage Alternative 2</option><option value="homepage_narrow1.php">Homepage Narrow sidebar 1</option><option value="listing_2col.php">Listing 2 columns »</option><option value="listing_3col.php">Listing 3 columns</option><option value="listing_4col.php">Listing 4 columns</option><option value="listing_sidebar.php">Listing w/ Sidebar</option><option value="post.php">Post template</option><option value="fullwidth.php">Fullwidth template</option></select></nav><!-- /nav -->
+                <!--<form method="post" action="action.php" id="search" class="four columns omega">
+                    <p><input type="text" title="Search"></p>
+                </form>-->
+            </div>
             <!-- /logo-social -->
             <!--<p class="eight columns omega social-links">
                 <a href="#" class="icn facebook">Facebook</a>
