Dammed mobile menu!

--- a/games_list.html
+++ b/games_list.html
@@ -45,9 +45,9 @@
     <header class="sixteen columns">
         <div class="row logo-social container">
             <hgroup class="eight columns alpha">
-                <h1 class="logo nmb"><a href="#">
+                <h1 class="logo nmb"><a href="index.html">
                     <!-- <img src="images/logo.png" alt="IndiGamer" />-->
-                    Game portal
+                    Game Portal
                 </a></h1>
             </hgroup><!-- /hgroup -->
             <div class="row nav-search">
