Added old jQuery back

--- a/games_list.html
+++ b/games_list.html
@@ -52,78 +52,36 @@
             </hgroup><!-- /hgroup -->
             <div class="row nav-search">
                 <nav id="navigation" class="twelve columns alpha">
-                    <ul class="nav group sf-js-enabled sf-shadow">
-                        <li class="">
-                            <a href="index.html" class="sf-with-ul">Главная<!--<span class="sf-sub-indicator"></span>--></a>
-                            <!--<ul style="display: none; visibility: hidden;">
-                                <li><a href="homepage_alt.php">Homepage Alternative 1</a></li>
-                                <li><a href="homepage_alt2.php">Homepage Alternative 2</a></li>
-                                <li><a href="homepage_narrow1.php">Homepage Narrow sidebar 1</a></li>
-                            </ul>-->
-                        </li>
-                        <li>
-                            <a href="games_list.html" class="sf-with-ul">Игры<!--<span class="sf-sub-indicator"> »</span>--></a>
-                           <!-- <ul style="display: none; visibility: hidden;">
-                                <li><a href="listing_3col.php">Listing 3 columns</a></li>
-                                <li><a href="listing_4col.php">Listing 4 columns</a></li>
-                                <li><a href="listing_sidebar.php">Listing w/ Sidebar</a></li>
-                            </ul>-->
-                        </li>
-                        <li>
-                            <a href="#">О сервисе</a>
-                        </li>
-                        <li>
-                            <a href="#">Вход</a>
-                        </li>
-                    </ul>
-                    <select class="alt-nav"><option selected="selected" value="">Go to...</option><option value="index.php">Home »</option><option value="homepage_alt.php">Homepage Alternative 1</option><option value="homepage_alt2.php">Homepage Alternative 2</option><option value="homepage_narrow1.php">Homepage Narrow sidebar 1</option><option value="listing_2col.php">Listing 2 columns »</option><option value="listing_3col.php">Listing 3 columns</option><option value="listing_4col.php">Listing 4 columns</option><option value="listing_sidebar.php">Listing w/ Sidebar</option><option value="post.php">Post template</option><option value="fullwidth.php">Fullwidth template</option></select></nav><!-- /nav -->
-                <!--<form method="post" action="action.php" id="search" class="four columns omega">
-                    <p><input type="text" title="Search"></p>
-                </form>-->
+                    <div class="wrapper">
+                        <div class="menuToggle">Меню</div>
+                        <ul class="nav group sf-js-enabled sf-shadow menu clearfix">
+                            <li class="">
+                                <a href="index.html" class="sf-with-ul">Главная</a>
+                            </li>
+                            <li>
+                                <a href="games_list.html" class="sf-with-ul">Игры<!--<span class="sf-sub-indicator"> »</span>--></a>
+                            </li>
+                            <li>
+                                <a href="#">О сервисе</a>
+                            </li>
+                            <li>
+                                <a href="#">Вход</a>
+                            </li>
+                            <li>
+                                <a href="#">Регистрация</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                </nav><!-- /nav -->
+
             </div>
-            <!-- /logo-social -->
-            <!--<p class="eight columns omega social-links">
-                <a href="#" class="icn facebook">Facebook</a>
-                <a href="#" class="icn twitter">Twitter</a>
-                <a href="#" class="icn dribbble">Dribbble</a>
-                <a href="#" class="icn wordpress">WordPress</a>
-                <a href="#" class="icn rss">RSS</a>
-            </p>&lt;!&ndash; /social &ndash;&gt;-->
+
         </div>
 
 
 
-        <!--<div class="row nav-search">
-            <nav id="navigation" class="twelve columns alpha">
-                <ul class="nav group">
-                    &lt;!&ndash;<li>
-                        <a href="index.html">Home</a>
-                        <ul>
-                            <li><a href="index_alt1.html">Homepage Alternative 1</a></li>
-                            <li><a href="index_alt2.html">Homepage Alternative 2</a></li>
-                            <li><a href="index_alt3.html">Homepage Narrow sidebar 1</a></li>
-                        </ul>
-                    </li>&ndash;&gt;
-                    &lt;!&ndash;<li>
-                        <a href="listing_2col.html">Listing 2 columns</a>
-                        <ul>
-                            <li><a href="listing_3col.html">Listing 3 columns</a></li>
-                            <li><a href="listing_4col.html">Listing 4 columns</a></li>
-                            <li><a href="listing_sidebar.html">Listing w/ Sidebar</a></li>
-                        </ul>
-                    </li>&ndash;&gt;
-                    &lt;!&ndash;<li>
-                        <a href="single.html">Post template</a>
-                    </li>
-                    <li>
-                        <a href="fullwidth.html">Fullwidth</a>
-                    </li>	&ndash;&gt;
-                </ul>
-            </nav>&lt;!&ndash; /nav &ndash;&gt;
-            &lt;!&ndash;<form method="post" action="action.php" id="search" class="four columns omega">
-                <p><input type="text" title="Search" /></p>
-            </form>&ndash;&gt;
-        </div>&lt;!&ndash; /nav-search &ndash;&gt;-->
+
     </header><!-- /header -->
 </div><!-- row -->
 
@@ -343,6 +301,7 @@
 		</div>
 	</div>
 </div><!-- /footer-wrap -->
+<script src="./js/jquery-3.0.0.min.js"></script>
 <script src="./js/jquery-1.7.2.min.js"></script>
 <script src="./js/jquery.flexslider-min.js"></script>
 <script src="./js/superfish.js"></script>
@@ -351,6 +310,7 @@
 <script src="./js/jquery.equalHeights.js"></script>
 <script src="./js/jquery.scripts.js"></script>
 <script src="./js/slider.js"></script>
+<script src="./js/mobileMenu.js"></script>
 
 <!--[if (gte IE 6)&(lte IE 8)]>
 	<script type="text/javascript" src="js/selectivizr-min.js"></script>
