--- a/index.html
+++ b/index.html
@@ -550,6 +550,7 @@
 	</div>
 </div><!-- /footer-wrap -->
 <script src="./js/jquery-3.0.0.min.js"></script>
+<script src="./js/jquery-1.7.2.min.js"></script>
 <script src="./js/jquery.flexslider-min.js"></script>
 <script src="./js/superfish.js"></script>
 <!--<script src="fancybox/jquery.fancybox.pack.js"></script>-->
