--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
 	<div class="row">
 		<div class="sixteen columns columnRevers">
-			<div class="ten columns alpha content mobileDown">
+			<div class="ten columns alpha content">
 				<div class="row latest-reviews">
 					<h3>Latest Reviews</h3>
 					<h4 class="sub">Subheader with a small description</h4>
