Column–revers for games_list

--- a/games_list.html
+++ b/games_list.html
@@ -90,7 +90,7 @@
 
 
     <div class="row gamesListContainer">
-        <div class="sixteen columns">
+        <div class="sixteen columns columnRevers">
 
             <div class="two-thirds column alpha content">
 
