Dammed mobile menu!!!!

--- a/games_list.html
+++ b/games_list.html
@@ -41,49 +41,58 @@
 </head>
 
 <body>
-<div class="row nmb header">
-    <header class="sixteen columns">
-        <div class="row logo-social container">
-            <hgroup class="eight columns alpha">
-                <h1 class="logo nmb"><a href="index.html">
-                    <!-- <img src="images/logo.png" alt="IndiGamer" />-->
-                    Game Portal
-                </a></h1>
-            </hgroup><!-- /hgroup -->
-            <div class="row nav-search">
-                <nav id="navigation" class="twelve columns alpha">
-                    <div class="wrapper">
-                        <div class="menuToggle">Меню</div>
-                        <ul class="nav group sf-js-enabled sf-shadow menu clearfix">
-                            <li class="">
-                                <a href="index.html" class="sf-with-ul">Главная</a>
-                            </li>
-                            <li>
-                                <a href="games_list.html" class="sf-with-ul">Игры<!--<span class="sf-sub-indicator"> »</span>--></a>
-                            </li>
-                            <li>
-                                <a href="#">О сервисе</a>
-                            </li>
-                            <li>
-                                <a href="#">Вход</a>
-                            </li>
-                            <li>
-                                <a href="#">Регистрация</a>
-                            </li>
-                        </ul>
-                    </div>
+<header class="row nmb header">
+    <div class="row logo-social container">
+        <h1 class="logo nmb"><a href="index.html">
+            <!-- <img src="images/logo.png" alt="IndiGamer" />-->
+            Game Portal
+        </a></h1>
+        <div class="row nav-search">
+            <nav id="navigation">
+                <div class="wrapper">
+                    <div class="menuToggle"></div>
+                </div>
+                <ul class="nav group sf-js-enabled sf-shadow menu clearfix DESKTOP">
+                    <li class="">
+                        <a href="index.html" class="sf-with-ul">Главная</a>
+                    </li>
+                    <li>
+                        <a href="games_list.html" class="sf-with-ul">Игры<!--<span class="sf-sub-indicator"> »</span>--></a>
+                    </li>
+                    <li>
+                        <a href="#">О сервисе</a>
+                    </li>
+                    <li>
+                        <a href="#">Вход</a>
+                    </li>
+                    <li>
+                        <a href="#">Регистрация</a>
+                    </li>
+                </ul>
 
-                </nav><!-- /nav -->
-
-            </div>
+            </nav><!-- /nav -->
 
         </div>
 
-
-
-
-    </header><!-- /header -->
-</div><!-- row -->
+    </div>
+    <ul class="nav group sf-js-enabled sf-shadow menu clearfix MOBILE">
+        <li class="">
+            <a href="index.html" class="sf-with-ul">Главная</a>
+        </li>
+        <li>
+            <a href="games_list.html" class="sf-with-ul">Игры<!--<span class="sf-sub-indicator"> »</span>--></a>
+        </li>
+        <li>
+            <a href="#">О сервисе</a>
+        </li>
+        <li>
+            <a href="#">Вход</a>
+        </li>
+        <li>
+            <a href="#">Регистрация</a>
+        </li>
+    </ul>
+</header><!-- row -->
 
 
 <div class="container">
