Made logo more "center"

--- a/index.html
+++ b/index.html
@@ -41,60 +41,9 @@
 </head>
 
 <body>
-<!--<header class="row nmb header">
-        <div class="row logo-social container">
-                <h1 class="logo nmb"><a href="index.html">
-                    &lt;!&ndash; <img src="images/logo.png" alt="IndiGamer" />&ndash;&gt;
-                    Game Portal
-                </a></h1>
-            <div class="row nav-search">
-                <nav id="navigation">
-                    <div class="wrapper">
-                        <div class="menuToggle"></div>
-                    </div>
-                    <ul class="nav group sf-js-enabled sf-shadow menu clearfix DESKTOP">
-                        <li class="">
-                            <a href="index.html" class="sf-with-ul">Главная</a>
-                        </li>
-                        <li>
-                            <a href="games_list.html" class="sf-with-ul">Игры&lt;!&ndash;<span class="sf-sub-indicator"> »</span>&ndash;&gt;</a>
-                        </li>
-                        <li>
-                            <a href="#">О сервисе</a>
-                        </li>
-                        <li>
-                            <a href="#">Вход</a>
-                        </li>
-                        <li>
-                            <a href="#">Регистрация</a>
-                        </li>
-                    </ul>
 
-                </nav>&lt;!&ndash; /nav &ndash;&gt;
-
-            </div>
-
-        </div>
-    <ul class="nav group sf-js-enabled sf-shadow menu clearfix MOBILE">
-        <li class="">
-            <a href="index.html" class="sf-with-ul">Главная</a>
-        </li>
-        <li>
-            <a href="games_list.html" class="sf-with-ul">Игры&lt;!&ndash;<span class="sf-sub-indicator"> »</span>&ndash;&gt;</a>
-        </li>
-        <li>
-            <a href="#">О сервисе</a>
-        </li>
-        <li>
-            <a href="#">Вход</a>
-        </li>
-        <li>
-            <a href="#">Регистрация</a>
-        </li>
-    </ul>
-</header>&lt;!&ndash; row &ndash;&gt;-->
 <header class="header">
-    <div class="container flexS-B">
+    <div class="container mobileHeaderContainer flexS-B">
         <h1 class="logo"><a href="index.html">Game Portal</a></h1>
         <nav id="navigation">
             <div class="wrapper">
@@ -113,9 +62,6 @@
 
 
 
-
-
-	
 
 <div id="block-for-slider">
     <div id="viewport">
@@ -139,11 +85,11 @@
     </div>
 </div>
 <aside class="widget group">
-    <form class="submit__form" action="">
-        <a class="submit__link" href="">
-            <button class="submit__button">ПОДПИСАТЬСЯ</button>
-        </a>
-    </form>
+    <div class="submit__form" >
+        <!--<a class="submit__link" href="">-->
+            <button class="submit__button">Получить доступ</button>
+        <!--</a>-->
+    </div>
 </aside>
 
 
