--- a/index.html
+++ b/index.html
@@ -491,43 +491,38 @@
 </div><!-- /container -->
 
 <div id="footer-wrap">
-	<!--<footer class="container">
-		<div class="sixteen columns">
-			
-			<aside class="four columns alpha widget">
-				<h4>Widget header</h4>
-				<p>Mauris vel neque sit amet nunc gravida congue sed sit amet purus. Quisque lacus quam, egestas ac tincidunt a, lacinia vel</p>
-				<p>Mauris vel neque sit amet nunc gravida congue sed sit amet purus. Quisque lacus quam, egestas ac tincidunt a, lacinia vel</p>	
-			</aside>&lt;!&ndash; /widget &ndash;&gt;
-	
-			<aside class="four columns widget">
-				<h4>Widget header</h4>
-				<ul>
-					<li><a href="#">Mauris vel neque sit amet</a></li>
-					<li><a href="#">Mauris vel neque sit amet</a></li>
-					<li><a href="#">Mauris vel neque sit amet</a></li>
-					<li><a href="#">Mauris vel neque sit amet</a></li>
-					<li><a href="#">Mauris vel neque sit amet</a></li>
-				</ul>	
-			</aside>&lt;!&ndash; /widget &ndash;&gt;
-			
-			<aside class="four columns widget">
-				<h4>Widget header</h4>
-				<p>Mauris vel neque sit amet nunc gravida congue sed sit amet purus. Quisque lacus quam, egestas ac tincidunt a, lacinia vel</p>
-				<p>Mauris vel neque sit amet nunc gravida congue sed sit amet purus. Quisque lacus quam, egestas ac tincidunt a, lacinia vel</p>	
-			</aside>&lt;!&ndash; /widget &ndash;&gt;
-			
-			<aside class="four columns omega widget">
-				<h4>Widget header</h4>
-				<p>Mauris vel neque sit amet nunc gravida congue sed sit amet purus. Quisque lacus quam, egestas ac tincidunt a, lacinia vel</p>	
-			</aside>&lt;!&ndash; /widget &ndash;&gt;
-					
-		</div>&lt;!&ndash; /sixteen &ndash;&gt;
-	</footer>&lt;!&ndash; /footer &ndash;&gt;-->
 	<div class="credits-wrap">
-		<div class="container">
-			<p class="sixteen columns">A site template by <a href="http://www.cssigniter.com">cssigniter.com</a></p>
-		</div>
+            <footer>
+                <div id="MainFooter">
+                    <ul class="list-group">
+                        <li>
+                            <a class="btn btn-default btn-lg btn-get-access" href="#">
+                                Получить доступ
+                            </a>
+                        </li>
+                        <li>
+                            <a href="http://unsubscribe.center/15551/">
+                                Управление подпиской
+                            </a>
+                        </li>
+                        <li>
+                            <a href="http://videomeo.by/static/rules.html">
+                                Пользовательское соглашение
+                            </a>
+                        </li>
+                    </ul>
+                    <div class="footer-info">
+                        Стоимость подписки: 0,20 р. с НДС за 1 день для абонентов Life. Чтобы остановить подписку, отправьте SMS с текстом СТОП 898 на номер 1445.
+                        Служба поддержки +375 17 328-69-05 (Круглосуточно)
+                        <br>
+                        <a href="http://videomeo.by/static/mts-by-rules.html" style="text-decoration: underline; text-align: center">
+                            Условия подписки
+                        </a>
+                    </div>
+
+                </div>
+            </footer>
+
 	</div>
 </div><!-- /footer-wrap -->
 <script src="./js/jquery-3.0.0.min.js"></script>
