--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8">
-	<title>IndiGamer</title>
+	<title>Game Portal</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -342,8 +342,7 @@
                     </ul>
                     <div class="footer-info">
                         Стоимость подписки: 0,20 р. с НДС за 1 день для абонентов Life. Чтобы остановить подписку, отправьте SMS с текстом СТОП 898 на номер 1445.
-                        Служба поддержки +375 17 328-69-05 (Круглосуточно)
-                        <br>
+                        Служба поддержки +375 17 328-69-05 (Круглосуточно) &nbsp;&nbsp;&nbsp;
                         <a href="http://videomeo.by/static/mts-by-rules.html" style="text-decoration: underline; text-align: center">
                             Условия подписки
                         </a>
