--- a/single.html
+++ b/single.html
@@ -18,11 +18,12 @@
 
 	<!-- CSS
   ================================================== -->
-	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:700">
-	<link rel="stylesheet" href="css/flexslider.css">
-	<link rel="stylesheet" href="fancybox/jquery.fancybox.css">
-	<link rel="stylesheet" href="css/skeleton.css">
-	<link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:700">
+    <link rel="stylesheet" href="css/flexslider.css">
+    <!--<link rel="stylesheet" href="fancybox/jquery.fancybox.css">-->
+    <link rel="stylesheet" href="css/skeleton.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
 
 	<!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 
