One_game page css

--- a/one_game.html
+++ b/one_game.html
@@ -59,7 +59,7 @@
 	
     <div class="row">
 
-        <div class="oneGame__img-wrapper flexS-A flexAi-C">
+        <div class="oneGame__wrapper flexS-A flexAi-C mobileFlexFD-C">
             <h1>Failling Ninja</h1>
             <img alt="" src="https://image-cc.s3.envato.com/files/228393380/SplashFallingA.png" class="scale-with-grid" />
         </div>
@@ -93,8 +93,8 @@
 	            </div>
             </div>
 
-            <div class="content flexS-B flexAi-C">
-                <div class="description">
+            <div class="content flexS-B flexAi-C .mobileFlexFD-C">
+                <div class="description .mobileFlexFD-C">
                     <div class="description__text">
                         <h3>
                             Get off parachutes by dodging all obstacles or die trying!
