--- a/one_game.html
+++ b/one_game.html
@@ -80,20 +80,20 @@
 	            <div class="row nmb">
 	                <ul class="verdict group">
 	                    <li class="good">
-	                        <h4>The Good</h4>
-	                        <p>Detailed atmospheric setting, Wonderful sense of weight, Smart, intuitive controls and interface. Addictive supply of loot.</p>
+	                        <h4>EricProchnow</h4>
+	                        <p>Good Game! GLWS!</p>
 	                    </li>
 	
-	                    <li class="bad">
-	                        <h4>The Bad</h4>
-	                        <p>Detailed atmospheric setting, Wonderful sense of weight, Smart, intuitive controls and interface. Addictive supply of loot.</p>
+	                    <li class="good">
+	                        <h4>hamzawasim3</h4>
+	                        <p>nice one!</p>
 	                    </li>
 
 	                </ul>
 	            </div>
             </div>
 
-            <div class="content flexS-B flexAi-C .mobileFlexFD-C">
+            <div class="onePageContent .mobileFlexFD-C">
                 <div class="description .mobileFlexFD-C">
                     <div class="description__text">
                         <h3>
@@ -114,8 +114,8 @@
                 </aside>
                 </div>
                 <div class="screenshots">
-                    <div class="content__img"><img src="https://0.s3.envato.com/files/228393382/1.png" class="content__Oneimg"></div>
-                    <div class="content__img"><img src="https://0.s3.envato.com/files/228393382/2.png" class="content__Oneimg"></div>
+                    <div class="content__img"><img src="https://0.s3.envato.com/files/228393382/1.png" class="content__oneImg"></div>
+                    <div class="content__img"><img src="https://0.s3.envato.com/files/228393382/2.png" class="content__oneImg"></div>
                 </div>
             </div>
 
